--- a/vercel.json
+++ b/vercel.json
@@ -46,7 +46,7 @@
       ]
     },
     {
-      "source": "/(.*\\.(css|js|woff|woff2|ttf|otf))",
+      "source": "/:all*.:ext(css|js|woff|woff2|ttf|otf)",
       "headers": [
         {
           "key": "Cache-Control",
