--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "next": "^15.0.0",
     "next-themes": "^0.4.6",
     "react": "^18.3.1",
+    "react-day-picker": "^9.9.0",
     "react-dom": "^18.3.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
